[package]
name = "seven-gui-amethyst"
version = "0.1.0"
authors = ["Daniel Boyle <boylede+github@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = {version = "0.15.3", features = ["vulkan", "no-slow-safety-checks"]}
log = { version = "0.4.8", features = ["serde"] }

[profile.release]
opt-level = 's'
lto=true
codegen-units = 1
panic = 'abort'


